Adding the training scenario

--- a/2-training.ipynb
+++ b/2-training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c61aa426-39f5-4576-9e70-2a2c19693dac",
    "metadata": {},
    "outputs": [],
@@ -20,19 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a87cd0d7-6d66-4754-9d91-36b3fccd7a04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/sagemaker-user/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3f30267e-688d-40f9-9690-69569dca9051",
    "metadata": {},
    "outputs": [],
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ea0364f-e50e-4568-8ee7-69981acf753d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "31d5a1a0-10dd-477c-a741-cbb5b17ab4cb",
    "metadata": {},
    "outputs": [],
@@ -138,7 +129,7 @@
    "id": "38ad805a-7dca-452f-8c81-a1bfa252e9f7",
    "metadata": {},
    "source": [
-    "## 3. Logging"
+    "## 3. Manual Logging"
    ]
   },
   {
@@ -151,21 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ab546085-a67f-43e8-930f-7d08cad2748e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='s3://sagemaker-ap-northeast-2-185567426878/mlflow/21-06-07-33/2', creation_time=1729494869387, experiment_id='2', last_update_time=1729494869387, lifecycle_stage='active', name='end-to-end-experiment-21-07-13-50', tags={}>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mlflow\n",
     "\n",
@@ -183,36 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cbeddeef-848a-4477-9f15-f0f9dc32f30d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Creating training-job with name: training-job-2024-10-21-13-30-18-998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb1.fit(training_inputs,wait=False,logs=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "89cfadbe-04d9-4137-8a06-6eddd6f73990",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Creating training-job with name: training-job-2024-10-21-13-30-42-668\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb2.fit(training_inputs,wait=True,logs=False) "
    ]
@@ -235,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c29702e7-d53e-441a-98d2-caee5daa509d",
    "metadata": {},
    "outputs": [],
@@ -284,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "41b962bb-d4fe-4bbd-a7d2-55bfe45fd7b3",
    "metadata": {},
    "outputs": [],
@@ -298,77 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eaadf53d-95f4-45ff-8473-90a1d95de782",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:mae found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:aucpr found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:f1_binary found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:mae found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:logloss found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:f1 found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:mse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:recall found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:poisson-nloglik found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:precision found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:error found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:ndcg found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:map found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:f1_binary found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:error found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:poisson-nloglik found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:rmse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:logloss found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:aucpr found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:balanced_accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:rmse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:mse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:ndcg found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:f1 found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:map found\n",
-      "/opt/conda/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [13:37:52] WARNING: /home/conda/feedstock_root/build_artifacts/xgboost-split_1713397725960/work/src/c_api/c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
-      "  warnings.warn(smsg, UserWarning)\n",
-      "/opt/conda/lib/python3.11/site-packages/_distutils_hack/__init__.py:32: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
-      "  warnings.warn(\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:mae found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:aucpr found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:f1_binary found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:mae found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:logloss found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:f1 found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:mse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:recall found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:poisson-nloglik found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:precision found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:error found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:ndcg found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:map found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:f1_binary found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:error found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:poisson-nloglik found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:rmse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:logloss found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:aucpr found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:balanced_accuracy found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:rmse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:mse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:ndcg found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:f1 found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:map found\n",
-      "/opt/conda/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [13:37:58] WARNING: /home/conda/feedstock_root/build_artifacts/xgboost-split_1713397725960/work/src/c_api/c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
-      "  warnings.warn(smsg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_logging(xgb1, run_name_1)\n",
     "run_logging(xgb2, run_name_2)"
@@ -376,19 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "aa8073b4-6db2-461d-a6e7-736f0e43d902",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'run_name_1' (str)\n",
-      "Stored 'run_name_2' (str)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%store run_name_1\n",
     "%store run_name_2"
@@ -404,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4a9d5835-67f7-467c-be88-1e1542441d88",
    "metadata": {},
    "outputs": [],
@@ -426,23 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b707c1c6-0d4f-421b-9705-7aa0d487fa34",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "window.open(\"https://t-1slwpmxe6ptj.ap-northeast-2.experiments.sagemaker.aws/#/experiments/1/runs/06b26a107bfc47dab01464b61dab2333\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Javascript\n",
     "\n",
@@ -459,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a2b4ad47-22c4-4936-bda0-f3b9eff5ec6d",
    "metadata": {},
    "outputs": [],
@@ -469,20 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "23fce149-92da-4df2-8c18-1e982df3ccd9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered model 'model-end-to-end-experiment-21-07-13-50' already exists. Creating a new version of this model...\n",
-      "2024/10/21 13:40:25 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: model-end-to-end-experiment-21-07-13-50, version 3\n",
-      "Created version '3' of model 'model-end-to-end-experiment-21-07-13-50'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_id_1 = mlflow.search_runs(\n",
     "    experiment_ids=[mlflow.get_experiment_by_name(experiment_name).experiment_id], \n",
@@ -497,20 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "580bbac4-c46d-497a-87a8-7ff9c6c820e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered model 'model-end-to-end-experiment-21-07-13-50' already exists. Creating a new version of this model...\n",
-      "2024/10/21 13:40:27 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: model-end-to-end-experiment-21-07-13-50, version 4\n",
-      "Created version '4' of model 'model-end-to-end-experiment-21-07-13-50'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "run_id_2 = mlflow.search_runs(\n",
     "    experiment_ids=[mlflow.get_experiment_by_name(experiment_name).experiment_id], \n",
@@ -525,21 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b2e20a23-a207-48ba-940c-00c2f0687441",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'run_id_1' (str)\n",
-      "Stored 'run_id_2' (str)\n",
-      "Stored 'registered_model_version_1' (ModelVersion)\n",
-      "Stored 'registered_model_version_2' (ModelVersion)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%store run_id_1\n",
     "%store run_id_2\n",
@@ -549,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4c984dce-a948-4679-9551-66bdbfeef2f8",
    "metadata": {},
    "outputs": [],
@@ -562,7 +406,7 @@
    "id": "c162a636-de61-412f-af5c-bbeba052723e",
    "metadata": {},
    "source": [
-    "## [Optional] 6. Training Job - Script Mode "
+    "## 6. Training Job - Script Mode + Auto Logging"
    ]
   },
   {
@@ -575,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e028cfc9-fc92-4904-bc04-f23dac31481c",
    "metadata": {},
    "outputs": [],
@@ -585,18 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f451bfd3-53d2-4d46-8deb-8d76ccee71b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ./training/requirements.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile './training/requirements.txt'\n",
     "mlflow==2.13.2\n",
@@ -613,18 +449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c3c25c20-b4de-4e02-a81c-a0f2ba4cc507",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ./training/train.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile ./training/train.py\n",
     "\n",
@@ -796,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3bb47989-4970-4d77-9fa3-5c216747c37b",
    "metadata": {},
    "outputs": [],
@@ -825,19 +653,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "57874d65-4fa1-42ac-a720-562c62ce304d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker.image_uris:Ignoring unnecessary Python version: py3.\n",
-      "INFO:sagemaker.image_uris:Ignoring unnecessary instance type: ml.m5.large.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sagemaker.xgboost.estimator import XGBoost\n",
     "\n",
@@ -857,39 +676,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0f93110c-ca1f-4826-ac4d-09a2ae67783d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Creating training-job with name: script-training-job-2024-10-21-13-48-32-829\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "2024-10-21 13:48:34 Starting - Starting the training job..\n",
-      "2024-10-21 13:48:49 Starting - Preparing the instances for training....\n",
-      "2024-10-21 13:49:17 Downloading - Downloading input data.......\n",
-      "2024-10-21 13:49:57 Downloading - Downloading the training image............\n",
-      "2024-10-21 13:51:03 Training - Training image download completed. Training in progress......\n",
-      "2024-10-21 13:51:33 Uploading - Uploading generated training model..\n",
-      "2024-10-21 13:51:47 Completed - Training job completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb_script_mode.fit(training_inputs,wait=True,logs=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e7795bd9-6095-45f7-9e4e-d75afaa122ec",
    "metadata": {},
    "outputs": [],
@@ -911,36 +708,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "49ff9864-08a4-471a-b836-98be3671b319",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "window.open(\"https://t-1slwpmxe6ptj.ap-northeast-2.experiments.sagemaker.aws/#/experiments/1/runs/5b5b5e742c224843bf0640322599ecf0\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Javascript\n",
     "\n",
     "display(Javascript('window.open(\"{}\");'.format(mlflow_run_link)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59b88a09-8386-43c5-a013-9931542d93c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
